RESOLVED FIXED131048
Stub out the web process -> UI process message SPI
https://bugs.webkit.org/show_bug.cgi?id=131048
Summary Stub out the web process -> UI process message SPI
Anders Carlsson
Reported 2014-04-01 11:00:13 PDT
Stub out the web process -> UI process message SPI
Attachments
Patch (27.67 KB, patch)
2014-04-01 11:02 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2014-04-01 11:02:36 PDT
WebKit Commit Bot
Comment 2 2014-04-01 11:05:01 PDT
Attachment 228301 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:39: Missing spaces around = [whitespace/operators] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3 2014-04-01 11:07:21 PDT
Comment on attachment 228301 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228301&action=review > Source/WebKit2/UIProcess/API/Cocoa/_WKScriptMessage.mm:45 > + > +@end You are missing name and scriptWorld. > Source/WebKit2/UIProcess/API/Cocoa/_WKUserContentController.mm:33 > +- (id <_WKScriptMessageHandlerToken>)addScriptMessageHandler:(id <_WKScriptMessageHandler>)scriptMessageHandler name:(NSString *)name world:(_WKScriptWorld *)world This should not have a return value. > Source/WebKit2/UIProcess/API/Cocoa/_WKUserContentController.mm:39 > +- (void)removeScriptMessageHandler:(id <_WKScriptMessageHandlerToken>)scriptMessageHandlerToken This has the wrong signature.
Anders Carlsson
Comment 4 2014-04-01 11:48:54 PDT
Note You need to log in before you can comment on or make changes to this bug.