Source/WebKit2/UIProcess/API/Cocoa/_WKScriptMessage.h
@@ -23,23 +23,26 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#import <WebKit2/WKWebViewConfiguration.h>
+#import <Foundation/Foundation.h>
+#import <WebKit2/WKFoundation.h>
 
 #if WK_API_ENABLED
 
 @class WKWebView;
-@class _WKVisitedLinkProvider;
-@class _WKUserContentController;
+@class _WKScriptWorld;
 
-@interface WKWebViewConfiguration (WKPrivate)
+WK_API_CLASS
+@interface _WKScriptMessage : NSObject
 
-@property (nonatomic, weak, setter=_setRelatedWebView:) WKWebView *_relatedWebView;
-@property (nonatomic, copy, setter=_setGroupIdentifier:) NSString *_groupIdentifier;
+@property (nonatomic, readonly) id body;
 
-@property (nonatomic, strong, setter=_setUserContentController:) _WKUserContentController *_userContentController;
+@property (nonatomic, readonly, weak) WKWebView *webView;
+@property (nonatomic, readonly) NSString *name;
+@property (nonatomic, readonly) _WKScriptWorld *scriptWorld;
 
-@property (nonatomic, strong, setter=_setVisitedLinkProvider:) _WKVisitedLinkProvider *_visitedLinkProvider;
+// FIXME: Consider adding the navigation as well.
 
 @end
 
 #endif
+
